# HMTrans

./: .gitignore  LICENSE  README.md
apps/harmonyos/: README.md  build-profile.example.json5  oh-package.json5
apps/harmonyos/AppScope/: app.json5
apps/harmonyos/docs/: ArkTS-实现说明.md  v0.2-ArkTS实现说明.md  v0.3-投屏实现说明.md
apps/harmonyos/entry/: build-profile.json5  oh-package.json5
apps/harmonyos/entry/src/main/cpp/: CMakeLists.txt  screen_capture_module.cpp
apps/harmonyos/entry/src/main/cpp/types/libhmtrans_cast/: Index.d.ts  oh-package.json5
apps/harmonyos/hvigor/: hvigor-config.json5
apps/macos/: Package.swift  README.md
apps/macos/Sources/HMTransCore/: DeviceDiscovery.swift  DeviceNameMatching.swift  DiagnosticRedaction.swift  HMTransCore.swift  PairingSecurity.swift  ReceivedPayloadPublisher.swift  ScreenCastProtocol.swift  V02Protocol.swift  WireProtocol.swift  ZipArchiveInspector.swift
apps/macos/Sources/HMTransMacApp/: HMTransMacApp.swift
apps/macos/Sources/HMTransMacCLI/: main.swift
apps/macos/scripts/: build-app.sh  build-dmg.sh
docs/: 00-项目说明.md  01-v0.2产品与交互方案.md  01-技术方案.md  01-版本演进.md  02-v0.2技术方案.md  02-v0.3产品与交互方案.md  02-传输协议-v0.1.md  03-v0.2传输协议.md  03-v0.3技术方案.md  03-开发计划.md  04-v0.2开发计划.md  04-v0.3投屏协议.md  05-v0.2验收清单.md  05-v0.3开发计划.md  06-v0.2发布前检查报告.md  06-v0.3验收清单.md  07-v0.3发布前检查报告.md  08-v0.3多Pad同时投屏架构评估.md  09-v0.3.1远程启动与反向控制规划.md  ACL权限申请说明.md  CNAME  README.md  connection-help.html  index.html  privacy.html  版本历史.md  项目说明.md
docs/releases/: v0.3.0.md
docs/site-assets/: styles.css
(+92 files in other folders)
